# PapelyLapiz

./: README.md
pyl5/pyl5/pyl5a/pyl5p/ImageProcessing/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Main.cpp~  Main20130430.cpp.old  Main20130509.cpp.old  Makefile  Makefile.cmake  SBActor.cpp  SBActor.cpp~  SBActor.h  SBAngleQuantization.h  SBArrow.cpp  SBArrow.cpp~  SBArrow.h  SBArrow.h~  SBComposition.cpp  SBComposition.cpp~  SBComposition.h  SBCompositionManager.cpp  SBCompositionManager.cpp~  SBCompositionManager.h  SBDefinitions.h  SBDefinitions.h~  SBFeatureComparison.cpp  SBFeatureComparison.h  SBFeatureExtraction.cpp  SBFeatureExtraction.cpp~  SBFeatureExtraction.h  SBFileUtils.cpp  SBFileUtils.h  SBFilterUtils.cpp  SBFilterUtils.h  SBGeometryUtils.cpp  SBGeometryUtils.cpp~  SBGeometryUtils.h  SBGeometryUtils.h~  SBImageUtils.cpp  SBImageUtils.h  SBNeighborUtils.cpp  (+25 more)
pyl5/pyl5/pyl5a/pyl5p/ImageProcessing/.svn/: all-wcprops  entries
pyl5/pyl5/pyl5a/pyl5p/ImageProcessing/CMakeScripts/: ReRunCMake.make  Thesis_postBuildPhase.makeRelease
pyl5/pyl5/pyl5a/pyl5p/ImageProcessing/Execution/: SS1.Test1.script.xml  SS1.Test1.script.xml~  SS1.vocabulary.xml  SS2.vocabulary.xml  score.xml  score.xml~  script.Comp8.BadAccess.xml  script.Comp8.BadAccess.xml~  script.Comp8.xml  script.Test1.xml  script.Test1.xml~  script.Test2.xml  script.Test2.xml~  scriptbbb.xml  scriptbbb.xml~  vocabulary.xml  vocabulary.xml~  vocabulary20130611.xml  vocabulary20130611.xml~  vocabulary20130618.xml  vocabulary20130618.xml~  vocabularyNEW.xml  vocabularyNEW.xml~  vocabulary_isis4001_03.xml  (+5 more)
(+1522 files in other folders)
