PROJECT (Thesis)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
  MESSAGE(FATAL_ERROR "ITK library couldn't be found. Required for the ${PROJECT_NAME} project")
  #INCLUDE_DIRECTORIES(BEFORE ${ITK_INCLUDE_DIR})				
ENDIF(ITK_FOUND)

SET ( ITK_LIBS ITKIO ITKCommon ITKBasicFilters ITKNumerics
ITKStatistics )

INCLUDE_DIRECTORIES(${Thesis_SOURCE_DIR})

ADD_EXECUTABLE(Thesis Main.cpp)

TARGET_LINK_LIBRARIES(Thesis ${ITK_LIBS})
